--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GOOGLE_API_KEY=AIzaSyAp1SBSL-b8ej6jtvyVjmnlZdE7gEeYJok
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZW5kbGVzcy1tb2xseS0zLmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_xc2v9ZkcudkmW8ggVpggHqcTBelfVzr60KJ12LuMHx
